--- a/Straws/templates/worker.html
+++ b/Straws/templates/worker.html
@@ -19,6 +19,13 @@
               </div>
               <button type="submit" class="btn btn-primary">Login</button>
             </form>
+            {% if messages %}
+                {% for msg in messages %}
+                    <span style="color:Orange; padding-bottom: 5px;">
+                        {{msg}}
+                    </span>
+                {% endfor %}
+            {% endif %}
         </center>
     </div>
 
