--- a/Straws/templates/workers_profile.html
+++ b/Straws/templates/workers_profile.html
@@ -14,44 +14,48 @@
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                    <form class="row g-2" text_align=center;  method="post" style="border-radius: 5px; background-color: #f2f2f2; padding: 20px; padding-left:250px;">
+                    <form class="row g-3" text_align=center;  method="post" style="border-radius: 5px; background-color: #f2f2f2; padding: 20px; padding-left:250px;">
                       {% csrf_token %}
-                      {% if form.id%}
-                        <div class="col-md-4">
+                        <div class="col-12">
                           <label for="id_name" class="form-label">Order_Id:</label>
-                          {{form.id}}
+                          {{data.id}}
                         </div>
-                      {% endif %}
-
                       <div class="col-md-4">
                         <label for="id_name" class="form-label">Name:</label>
-                        {{form.name}}
+                        {{form1.name}}
                       </div>
                       <div class="col-md-4">
                         <label for="id_mobile_number" class="form-label">Mobile Number:</label>
-                        {{form.mobile_number}}
+                        {{form1.mobile_number}}
                       </div>
                       <div class="col-12">
                         <label for="id_items" class="form-label">Items:</label>
-                        {{form.items}}
+                        {{form1.items}}
                       </div>
                       <div class="col-md-4">
                         <label for="id_total_amount" class="form-label">Total Amount:</label>
-                          {{form.total_amount}}
+                          {{form1.total_amount}}
                       </div>
                       <div class="col-md-4">
                         <label for="id_payment_mode" class="form-label">Mode Of Payment:</label>
-                        {{form.payment_mode}}
+                        {{form1.payment_mode}}
                       </div>
                       <div class="col-12">
                         <button type="submit" class="btn btn-warning">Save</button>
-                        <button type="submit" class="btn btn-success">Check-out</button>
+                        <a class="btn btn-success" href="{% url 'checkout' 'TableForm1' %}" role="button">Checkout</a>
                       </div>
+                      {% if messages %}
+                          {% for msg in messages %}
+                              <span style="color:Orange; padding-bottom: 5px;">
+                                  {{msg}}
+                              </span>
+                          {% endfor %}
+                      {% endif %}
                     </form>
               </div>
             </div>
           </div>
-          <!--
+
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
@@ -62,43 +66,47 @@
               <div class="accordion-body">
                   <form class="row g-2" text_align=center; method="post" style="border-radius: 5px; background-color: #f2f2f2; padding: 20px; padding-left:250px;">
                       {% csrf_token %}
-
-                      {% if form.id%}
-                        <div class="col-md-4">
+                        <div class="col-12">
                           <label for="id_name" class="form-label">Order_Id:</label>
-                          {{form.id}}
+                          {{data.id}}
                         </div>
-                      {% endif %}
-
                       <div class="col-md-4">
                         <label for="id_name" class="form-label">Name:</label>
-                        {{form.name}}
+                        {{form2.name}}
                       </div>
                       <div class="col-md-4">
                         <label for="id_mobile_number" class="form-label">Mobile Number:</label>
-                        {{form.mobile_number}}
+                        {{form2.mobile_number}}
                       </div>
                       <div class="col-12">
                         <label for="id_items" class="form-label">Items:</label>
-                        {{form.items}}
+                        {{form2.items}}
                       </div>
                       <div class="col-md-4">
                         <label for="id_total_amount" class="form-label">Total Amount:</label>
-                          {{form.total_amount}}
+                          {{form2.total_amount}}
                       </div>
                       <div class="col-md-4">
                         <label for="id_payment_mode" class="form-label">Mode Of Payment:</label>
-                        {{form.payment_mode}}
+                        {{form2.payment_mode}}
                       </div>
                       <div class="col-12">
                         <button type="submit" class="btn btn-warning">Save</button>
-                        <button type="submit" class="btn btn-success">Check-out</button>
+                        <a class="btn btn-success" href="{% url 'checkout' 'TableForm2' %}" role="button">Checkout</a>
 
                       </div>
+                      {% if messages %}
+                          {% for msg in messages %}
+                              <span style="color:Orange; padding-bottom: 5px;">
+                                  {{msg}}
+                              </span>
+                          {% endfor %}
+                      {% endif %}
                     </form>
               </div>
             </div>
           </div>
+            <!--
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
