changed workers page

--- a/Straws/templates/workers_profile.html
+++ b/Straws/templates/workers_profile.html
@@ -106,6 +106,16 @@
 <!--            </div>-->
 <!--          </div>-->
 
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="card-link">Card link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
+
 
 
 <!--modal Table #1-->
@@ -118,7 +128,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -196,7 +206,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal1">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -275,7 +285,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal2">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -351,7 +361,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal3">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -427,7 +437,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal4">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -504,7 +514,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myMod5">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -579,7 +589,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModa6">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -654,7 +664,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal7">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -730,7 +740,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal8">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
@@ -805,7 +815,7 @@
     {% else %}
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal9">
     {% endif%}
-    Orders
+    Order
   </button>
 
   <!-- The Modal -->
