--- a/Straws/templates/home.html
+++ b/Straws/templates/home.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 
-  <ul class="nav justify-content-center">
+ <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Active</a>
+    <a class="nav-link active" href="#">Active</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">Link</a>
@@ -12,14 +12,17 @@
   <li class="nav-item">
     <a class="nav-link" href="#">Link</a>
   </li>
-       <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Administration</a>
-    <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'shop_admin' %}">Login as Admin</a></li>
-      <li><a class="dropdown-item" href="{% url 'worker' %}">Login as Staff</a></li>
-    </ul>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Administration</a>
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="{% url 'worker' %}">Login as Staff</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="{% url 'shop_admin' %}">Login as Admin</a>
+    </div>
   </li>
 </ul>
+
+
 <!--
     <div style="position: absolute; top: 40%; width: 100%; text-align: center;">
         <center>
