--- a/Straws/templates/workers_profile.html
+++ b/Straws/templates/workers_profile.html
@@ -149,7 +149,7 @@
               {% if data7.id %}
                 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#myModal6">
                 {% else %}
-                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModa6">
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal6">
                 {% endif%}
                 Order
               </button>
