modified color of clear button

--- a/Straws/templates/workers_profile.html
+++ b/Straws/templates/workers_profile.html
@@ -309,7 +309,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm1' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm1' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm1' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -381,7 +381,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm2' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm2' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm2' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -457,7 +457,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm3' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm3' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm3' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -529,7 +529,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm4' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm4' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm4' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -601,7 +601,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm5' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm5' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm5' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -674,7 +674,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm6' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm6' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm6' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -746,7 +746,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm7' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm7' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm7' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -818,7 +818,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm8' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm8' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm8' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -891,7 +891,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm9' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm9' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm9' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
@@ -964,7 +964,7 @@
                   </div>
                   <button type="submit" class="btn btn-warning">Save</button>
                 <a class="btn btn-success" href="{% url 'checkout' 'TableForm10' %}" role="button">Checkout</a>
-                <a class="btn btn-success" href="{% url 'clear' 'TableForm10' %}" role="button">clear</a>
+                <a class="btn btn-danger" href="{% url 'clear' 'TableForm10' %}" role="button">clear</a>
                 {% if messages %}
                           {% for msg in messages %}
                               <span style="color:Orange; padding-bottom: 5px;">
